[package]
name = "klib"
version = "0.1.0"
authors = ["sharp <sharp@baishancloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
quick-error = "1.2.3"
regex = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.10.1", features = ["blocking", "gzip", "json"] }
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
