[package]
name = "klib"
version = "0.1.1"
authors = ["sharp <cppcoffee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "klib"

[dependencies]
structopt = "0.3"
regex = "1.4"
quick-error = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
